logs/atomia-client.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/atomia_client'...
Compiling './lib/python3.5/site-packages/atomia_client/atomia_entities.py'...
***   File "./lib/python3.5/site-packages/atomia_client/atomia_entities.py", line 35
    print json.dumps(self, default=encode_me, indent=4)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atomia_client/atomia_operations.py'...
***   File "./lib/python3.5/site-packages/atomia_client/atomia_operations.py", line 48
    except SoapFault, error:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/atomia_client/pysimplesoap_atomia'...
Compiling './lib/python3.5/site-packages/atomia_client/pysimplesoap_atomia/client.py'...
***   File "./lib/python3.5/site-packages/atomia_client/pysimplesoap_atomia/client.py", line 165
    except urllib2.HTTPError, error:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/atomia_client/pysimplesoap_atomia/server.py'...
***   File "./lib/python3.5/site-packages/atomia_client/pysimplesoap_atomia/server.py", line 77
    if DEBUG: print "dispatch method", name
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/atomia_client/pysimplesoap_atomia/simplexml.py'...
***   File "./lib/python3.5/site-packages/atomia_client/pysimplesoap_atomia/simplexml.py", line 114
    if DEBUG: print text
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/atomia_client-12.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
